Bug 1210852 - do SelectSettings of device capabilities on media thread. r=jesup

--HG--
extra : transplant_source : %8E%BB%7B%90MSt%0F%40s%8A%0C/%16y%15Ne%2A%1E